fixed dark mode background color!

--- a/src/Sidebar/Service/Service.css
+++ b/src/Sidebar/Service/Service.css
@@ -1,6 +1,7 @@
-* {
-
+.checkmark :focus {
+    outline: 1px solid transparent;
 }
+
 .ml{
     margin: 0.1em;
 }
